<resources>
    <string name="app_name">SIHProjectTakeOne</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="username">Username: </string>
    <string name="password">Password: </string>
    <string name="Username_hint">Enter Username</string>
    <string name="Password_hint">Enter password</string>
    <string name="Login">Login</string>
    <string name="login_btn_text">Login</string>
    <string name="registr_btn_text">Register</string>
    <string name="using_the_app_for_first_time_then_click_the_button_below">Using the app for first time? Then click the button below.</string>
    <string name="select_language">Select Language</string>
    <string name="select_lang_hin">भाषा चुनिए</string>
    <string name="english">English</string>
    <string name="Hindi">हिंदी</string>
    <string name="panchayat_finance">Panchayat Finance</string>
    <string name="virtual_trainer">Virtual Trainer</string>
    <string name="schemes">Schemes</string>
    <string name="social_issues">Social Issues</string>
    <string name="VillageName">Village: Kasap</string>
    <string name="literacy_rate">Literacy Rate: 35%</string>
    <string name="sex_ratio">Sex Ratio: 911</string>
    <string name="population">Population: 4568</string>
    <string name="woman_population">Woman Population: 1872</string>
    <string name="employment">Employment: 22%</string>
    <string name="child_population">Child Population: 988</string>
    <string name="info_figure">Info figure</string>
    <string name="literacy">Literacy:</string>

    <string-array name="Info_array">
        <item id="literacy">Literacy</item>
        <item id="women_literacy">Women Literacy</item>
        <item id="sex_ratio">Sex Ratio</item>
        <item id="population">Population</item>
        <item id="employment">Employment</item>
        <item id="child_population">Child Population</item>
        <item id="no_school">Number of Schools</item>
        <item id="no_fair_price_shop">Number of Fair Price Shops</item>
        <item id="no_girl_primary">Number of Primary Girls</item>
        <item id="no_pregnant">Number of Pregnant Ladies</item>
        <item id="no_special_disease">Number of Special Diseases</item>
        <item id="no_bpl">Number of BPL families</item>
        <item id="no_antyodaya">Number of Antodaya</item>
        <item id="no_malnutrition_women">number of malnourished women</item>
        <item id="no_malnourished_child">Number of malnourished children</item>
        <item id="no_women_health_issues">Number of women with health issues</item>
        <item id="percentage_depend_agriculture">Percentage dependent on agriculture</item>
        <item id="percentage_minority">Percentage of minority</item>
        <item id="no_percentage_women_health_issues">Number of Pregnant Women with health issues</item>
        <item id="percentage_depend_other">Percentage of people dependent on other sources of income</item>
        <item id="percentage_sc">Percerntage of SC</item>
        <item id="percentage_sc">percentage of ST</item>
        <item id="village">Village</item>
        <item id="percentage_depend_service">Percentage dependent on Service Sector</item>
        <item id="no_job_cards">Number of job card holders</item>
        <item id="no_female_job_card">Number of female with job cards </item>
    </string-array>
    <string name="title_activity_finance">Finance</string>
    <string name="panchayat_finances">Panchayat Finances</string>
    <string name="enter_year">Enter Year</string>
    <string name="enter_year_label">Enter Year :</string>
    <string name="central_allocation">Central Allocation</string>
    <string name="state_allocation">State Allocation</string>
    <string name="specific_scheme_allocation">Specific Scheme Allocation</string>
    <string name="misc_grant">Miscellaneous grant</string>
    <string name="show_fund_allocation">Show Fund Allocation</string>

</resources>
