<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.anwesh.sihprojecttakeone.LoginPage"
    android:background="@color/defaultBackground">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ArpitLogo"
            android:layout_width="match_parent"
            android:layout_height="147dp"
            app:srcCompat="@mipmap/logo_square" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:padding="8dp"
            android:textSize="15sp"
            android:textColor="@color/login_page_text"
            android:labelFor="@+id/username"
            android:drawableStart="@drawable/ic_account_circle_black_24dp"
            android:text="@string/username"
            />


        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/Username_hint"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:padding="8dp"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:padding="8dp"
            android:textSize="15sp"
            android:textColor="@color/login_page_text"
            android:labelFor="@+id/password"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/Username_hint"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:padding="8dp"
            android:textSize="20sp"/>

        <android.support.v7.widget.CardView
            android:id="@+id/login_btn"
            android:layout_width="180dp"
            android:layout_height="41dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:clickable="true"
            android:focusable="true"
            android:textAlignment="center"
            app:cardBackgroundColor="@android:color/holo_orange_dark"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/login_btn_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textColor="@color/login_page_text" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>


        <!--<Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@android:color/holo_orange_light"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/Login"
            android:textSize="15sp" />-->
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
